2002-05-04  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (FieldExpr): Remove un-needed tests for null, since now
	events are always registered FieldBuilders.
	
	* class.cs (FieldBase): New class shared by Fields 

	* delegate.cs: If we are a toplevel delegate, use our full name.
	If we are a nested delegate, then only use our tail name.

2002-05-02  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (IsApplicable): Ensure that we add the "&" to
	ref/out types before comparing it with the type of the argument.

	(IsParamsMethodApplicable): Ditto.

	(Argument.Type): Use TypeManager.LookupType instead of Type.GetType - 
	silly me ;-)

	* delegate.cs : Handle the case when we have more than one applicable
	method. Flag an error only when we finish checking all.

2002-05-02  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs: Add support for boolean static initializers.

2002-05-01  Miguel de Icaza  <miguel@ximian.com>

	* attribute.cs: Use proper cast for Events, since we use a MyEventBuilder.

	* parameter.cs (ComputeParameterTypes,
	ComputeAndDefineParameterTypes): Better error handling: now we
	clear the `types' cache if we fail during any of the type lookups.
	We also return the status code correctly to our caller

	* delegate.cs: If we fail to define a delegate, abort the extra
	steps. 

	* expression.cs (Binary.ResolveOperator): for
	operator==(object,object) and operator !=(object, object) we also
	have to verify that there is an implicit conversion from one to
	the other.

	(ArrayAccess.DoResolve): Array Access can operate on
	non-variables. 

2002-04-30  Miguel de Icaza  <miguel@ximian.com>

	* assign.cs (CompoundAssign): A new class used as a "flag" that
	the assignment actually is happening as part of a compound
	assignment operator.

	During compound assignment, a few new rules exist to enable things
	like:

	byte b |= 1 + 2

	From the spec:
	
	x op= y can be evaluated as x = (T) (x op y) (ie, an explicit cast